# svg-native-viewer

./: C-API.md  README.md  SKIA.md
.circleci/: config.yml
svgnative/: CMakeLists.txt  Makefile.am  SVGNativeViewerLib-uninstalled.pc.in  SVGNativeViewerLib.pc.in  configure.ac
svgnative/example/c-api/: CMakeLists.txt  GNUmakefile  SVGNativeCAPI.cpp  SVGNativeCAPI.h  testCAPI.c
svgnative/example/testCG/: CMakeLists.txt  TestCG.cpp
svgnative/example/testCairo/: CMakeLists.txt  TestCairo.cpp
svgnative/example/testQt/: CMakeLists.txt  TestQt.cpp
svgnative/example/testQt4/: CMakeLists.txt  TestQt4.cpp
svgnative/example/testSkia/: CMakeLists.txt
svgnative/include/: SVGDocument.h  SVGRenderer.h
svgnative/ports/cairo/: CairoImageInfo.c  CairoImageInfo.h  CairoSVGRenderer.cpp  CairoSVGRenderer.h
svgnative/ports/cg/: CGSVGRenderer.h
svgnative/ports/gdiplus/: GDIPlusSVGRenderer.cpp  GDIPlusSVGRenderer.h  GDIPlusSVGRendererImpl.h
svgnative/ports/qt/: QtSVGRenderer.cpp  QtSVGRenderer.h
svgnative/ports/qt4/: Qt4SVGRenderer.cpp  Qt4SVGRenderer.h
svgnative/ports/skia/: SkiaSVGRenderer.cpp  SkiaSVGRenderer.h
svgnative/ports/string/: StringSVGRenderer.h
svgnative/src/: Makefile.am  SVGDocument.cpp  SVGDocumentImpl.cpp  SVGDocumentImpl.h  SVGStringParser.cpp
